strokes-deploy-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strokes-deploy-api
  labels:
      app: strokes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: strokes
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: strokes
    spec:
      containers:        
        - image: classerredev/api-strokes:latest
          name: strokes-api
          ports:
            - containerPort: 8000
