strokes-svc copy.yml
apiVersion: v1
kind: Service
metadata:
  name: strokes-service-db
  labels:
    app: strokes
spec:
  type: ClusterIP
  selector:
    app: strokes
  ports:
  - port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: strokes-service-api
  labels:
    app: strokes
spec:
  type: ClusterIP
  selector:
    app: strokes
  ports:
  - protocol: TCP
    port: 30000
    targetPort: 8000
