strokes-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: strokes-service-db
  labels:
    app: strokes
spec:
  type: ClusterIP
  selector:
    app: strokes
  ports:
  - port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: strokes-service-api
  labels:
    app: strokes
spec:
  type: NodePort
  ports:
  - name: strokes-nodeport-30000
    nodePort: 30000
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: strokes
